--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,6 @@
 .middle-column {
     flex: 7;
     background-color: #FFFFFF;
-    padding: 1%;
     z-index: 0;
 	box-shadow:
 		5px 5px 5px rgba(0, 0, 0, 0.5),
@@ -125,24 +124,8 @@ ul.address-text p {
 	/* transition: background-color 0.3s ease-in-out; */
 	/* overflow: hidden; */
 	/* margin-left: 40%; */
-	right: 24%;
-}
-
-#toolbox::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgb(255, 255, 255);
-	opacity: 0.6;
-	transition: opacity 0.3s ease-in-out;
-	pointer-events: none;
-}
-
-#toolbox:hover::before {
-	opacity: 0;
+	margin-top: 10px;
+	right: 25%;
 }
 
 .icon-button {
@@ -153,6 +136,19 @@ ul.address-text p {
 	margin-right: 5px;
 	cursor: pointer;
 	border: none;
+	opacity: 0.7;
+}
+
+.icon-button:hover {
+	background-color: #3c4043;
+    color: #ffffff;
+}
+
+/* 高亮info按钮的样式 */
+.icon-button.highlight {
+    border: 3px solid RED;
+    position: relative; /* 添加这一行来使 z-index 生效 */
+    z-index: 11;
 }
 
 #info-text {
@@ -177,12 +173,7 @@ ul.address-text p {
     z-index: 10; /* 确保在最上层 */
 }
 
-/* 高亮info按钮的样式 */
-.icon-button.highlight {
-    border: 3px solid RED;
-    position: relative; /* 添加这一行来使 z-index 生效 */
-    z-index: 11;
-}
+
 /* table相关 */
 table {
 	background-color: #dddddd;
