--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -124,3 +124,29 @@ select {
     position: relative;
     /* transition: background-color 0.3s; */
 }
+
+.category {
+    margin-bottom: 10px;
+}
+
+.category-header {
+    cursor: pointer;
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    transition: background-color 0.3s;
+}
+
+.category-header:hover {
+    background-color: #e0e0e0;
+}
+
+.category-content {
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
