--- a/templates/list.html
+++ b/templates/list.html
@@ -35,9 +35,9 @@
                         <tr id="tableHeaderRow">
                             <th>Sequence</th>
                             <th>Scholar Name</th>
-                            <th id="paperCount" class="asc">Paper Count</th>
+                            <th id="paperCount">Paper Count</th>
                             <th id="citations">Paper Citations</th>
-                            <th id="h-index">h-index</th>
+                            <th id="h-index"  class="asc">h-index</th>
                             <th id="corePaperCount">Core Paper Count</th>
                             <th>Core Paper Citations</th>
                             <th>Core h-index</th>
@@ -174,7 +174,7 @@
             $("#paperCount").append(content.replace('$$content$$', questionContent));
             $("#corePaperCount").append(content.replace('$$content$$', "Core paper = first-author paper or advisee's first-author paper"));
 
-            scholarList.sort(compare("paperCount", "asc"));
+            scholarList.sort(compare("hIndex", "asc"));
             displayPagination();
         }
 
