--- a/templates/front.html
+++ b/templates/front.html
@@ -54,7 +54,9 @@ and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details
 					if(!isTest) {
 						delete data['fellow'];
 						delete data['ACMfellowTuring'];
-						delete data['AI'];
+						delete data['ACMfellow.0112'];
+						delete data['fellowTuring'];
+						// delete data['AI'];
 					}
 					// console.log(data);
 					createList(data);
