--- a/templates/front.html
+++ b/templates/front.html
@@ -21,11 +21,11 @@
 			<br />
             <div id="dynamicList" style="display: inline;">
 				<div class="category">
-					<div class="category-header" onclick="toggleCategory('category1')">CS-Subfield</div>
+					<div class="category-header" onclick="toggleCategory('category1')">Scholars by Research Area</div>
 					<div class="category-content" id="category1"></div>
 				</div>
 				<div class="category">
-					<div class="category-header" onclick="toggleCategory('category2')">Top-Scholar</div>
+					<div class="category-header" onclick="toggleCategory('category2')">Scholars by Award</div>
 					<div class="category-content" id="category2"></div>
 				</div>
 			</div>
