--- a/templates/index.html
+++ b/templates/index.html
@@ -411,6 +411,7 @@ $(function () {
     name = "{{ name }}";
     const fields = {{ fields|safe }};
     const fieldType = "{{ fieldType }}";
+    paperCount = "{{ paperCount }}";
     field_roots = fields[0];
     field_leaves = fields[1];
     field_roots.forEach(element => {
