--- a/templates/degree.html
+++ b/templates/degree.html
@@ -1192,7 +1192,7 @@ async function loadAuthorsData() {
     let promises = authorIDs_global.map(id => d3.json(`/src/json/${field}/authors/${id}.json`).then(data => {
         // Filter nodes and edges based on given probabilities
         let filteredNodes = data.nodes.filter(node => node.isKeyPaper >= nodeProbFilter);
-        let filteredEdges = data.edges.filter(edge => edge.prob >= edgeProbFilter);
+        let filteredEdges = data.edges.filter(edge => edge.extends_prob >= edgeProbFilter);
         let ln = filteredNodes.length;
         let le = filteredEdges.length;
         if (removeSurvey) filteredNodes = filteredNodes.filter(node => !node.survey);
@@ -1200,11 +1200,11 @@ async function loadAuthorsData() {
         let indegree = {}, outdegree = {}, alldegree = {};
         // set other nodes in filteredNodes outdegree/indegree =0
         filteredNodes.forEach(node => {
-            outdegree[node.paperID] = 0;
-            indegree[node.paperID] = 0;
-            alldegree[node.paperID] = 0;
+            outdegree[node.id] = 0;
+            indegree[node.id] = 0;
+            alldegree[node.id] = 0;
         })
-        let nodeSet = new Set(filteredNodes.map(node => node.paperID));
+        let nodeSet = new Set(filteredNodes.map(node => node.id));
         
         let edgeCount = 0;
         let connectedEdges = [];
@@ -1221,11 +1221,11 @@ async function loadAuthorsData() {
         });
         // filteredEdges = connectedEdges;
 
-        let connectedNodes = filteredNodes.filter(node => alldegree[node.paperID] > 0);
+        let connectedNodes = filteredNodes.filter(node => alldegree[node.id] > 0);
         if (removeIsolated) {
             
             for (let node of filteredNodes) {
-                let id = node.paperID;
+                let id = node.id;
                 if (alldegree[id] === 0 || alldegree[id] === undefined) {
                     delete outdegree[id];
                     delete indegree[id];
